# tabular-foundation-models

./: .gitignore  README.md  pyproject.toml
scripts/: download_dataset.py  tabicl_sandbox.py
src/tabular_foundation_models/: __init__.py  paths.py
